dist.ini: Allow included Makefile.PL for dzil build
Without these changes I can't build the package as dzil will
complain about Makefile.PL being added more than once...

--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,12 @@ license = Perl_5
 copyright_holder = Matthew Horsfall
 copyright_year   = 2016
 
-[@RJBS]
+[@Filter]
+-bundle = @RJBS
+-remove = Git::GatherDir
 
 [CopyFilesFromBuild]
 copy = Makefile.PL
+
+[Git::GatherDir]
+exclude_filename = Makefile.PL
